# mss-api-user-management

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
api/controllers/: user_controller.py
api/endpoints/: user_routes.py
api/models/: user_models.py
api/repositories/: group_repository.py  user_repository.py
api/routes/: routes.py  user_routes.py
api/schemas/: user_schemas.py
api/sql/: create_table.sql
